Code/Cluster/OptimalValues/BreastCancer/RunFRT/ClusterMessages/error/myscript_81BreastCancer_FRT_23819949.err
slurmstepd: error: *** JOB 23819949 ON n3051 CANCELLED AT 2025-01-28T08:47:42 ***
Lmod has detected the following error: The following module(s) are unknown:
"Python"

Please check the spelling or version number. Also try "module spider ..."
It is also possible your cache file is out-of-date; it may help to try:
  $ module --ignore_cache load "Python"

Also make sure that all modulefiles written in TCL start with the string
#%Module



  File "/mmfs1/home/simondn/RashomonActiveLearning/Code/OptimalThresholdSimulation.py", line 75
    ThresholdValues = np.arange(MinEpsilon, MaxEpsilon + 0.0001, 0.0001)c
                                                                        ^
SyntaxError: invalid syntax
